--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "@/styles/font.css";
 
 @plugin "@iconify/tailwind4";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
