fix(css): hover trigger tailwind v3

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,8 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@custom-variant hover (&:hover);
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
